# Aurora-Board

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  alembic.ini  astro.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
.astro/: settings.json
aurora-board/backend/: README.md  alembic.ini  pytest.ini  requirements.txt
aurora-board/backend/src/: :memory:_dummy_for_import
backend/alembic/: env.py
public/: tasks.json
public/locales/en/: translation.json
public/locales/es/: translation.json
public/locales/pt/: translation.json
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: AboutAI.tsx  Board.tsx  BoardView.tsx  Card.tsx  Column.tsx  Hero.tsx  Login.tsx  Opening.tsx  ProtectedRoute.tsx  ROI.tsx  Sinta.tsx  Sobre.tsx  SplashScreen.tsx  TaskCard.tsx
src/components/modals/: CreateCardModal.tsx  EditCardModal.tsx
src/components/sections/: AboutAI.tsx  Hero.tsx  Investidores.tsx  ROI.tsx  SobreNos.tsx  TechnologySection.tsx  VisionSection.tsx
src/layouts/: BaseLayout.astro
src/pages/: Home.tsx  LandingPage.tsx  Manifesto.tsx  index.astro
src/services/: api.ts
src/stores/: boardStore.ts
template-astro/: astro.config.mjs  package.json  tailwind.config.cjs  tsconfig.json
template-astro/src/components/: ContactForm.astro  FeatureCard.astro  Footer.astro  Header.astro  HeroSection.astro
template-astro/src/layouts/: BaseLayout.astro
template-astro/src/pages/: blog.astro  contato.astro  index.astro  sobre.astro  tecnologia.astro
(+12 files in other folders)
