[tool.poetry]
name = "aurora_board"
version = "0.1.0"
description = ""
authors = ["Rodrigo Cesar Winhaski"]
readme = "README.md"
packages = [
  { include = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"